# find-my-eclipse

./: .gitignore  LICENSE  Procfile  README.md  main.py  pyproject.toml  railpack.json  test.py  wrangler.toml
.claude/: settings.local.json
eclipse/: __init__.py  catalog.py  cli.py  compute.py  models.py  web.py
eclipse/static/: index.html  script.js  styles.css
src/: index.js
tests/: test_paths.py
