[project]
    dependencies=[
        "astronomy-engine>=2.1.19",
        "astropy>=7.2.0",
        "hypothesis>=6.150.1",
        "pydantic>=2.12.5",
        "pytest>=9.0.2",
    ]
    description="Add your description here"
    name="eclipse"
    readme="README.md"
    requires-python=">=3.12"
    version="0.1.0"

[tool.pytest.ini_options]
pythonpath = "."
